welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
		recule()
                      ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
	if (estFaceMur() | getCouleurSol()!=Color.green) {
        ^